--- a/DynamicBinding.vcxproj
+++ b/DynamicBinding.vcxproj
@@ -132,7 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="classes.hpp" />
-    <ClInclude Include="l.hpp" />
+    <ClInclude Include="Meta.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
